<resources>
    <string name="app_name">家計坊</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <!-- preference strings -->
    <string name="preference_title">設定画面</string>

    <string name="screen_preference_title">費目の変更</string>
    <string name="screen_preference_summary">費目を変更します</string>

    <string name="up_title">上部</string>
    <string name="up_summary">上部費目を変更します</string>
    <string name="right_title">右部</string>
    <string name="right_summary">右部費目を変更します</string>
    <string name="left_title">左部</string>
    <string name="left_summary">左部費目を変更します</string>
    <string name="bottom_title">下部</string>
    <string name="bottom_summary">下部費目を変更します</string>
    <string name="yosan_title">予算の設定</string>
    <string name="yosan_summary">来月の予算を設定します</string>


    <string name="action_settings">設定</string>
    <string name="title_activity_account_list">家計簿:リスト</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_data">家計坊:編集</string>
    <string name="title_activity_setting">家計坊:設定</string>
    <string name="title_activity_graph">a</string>
    <string name="title_activity_fragment">FragmentActivity</string>

    <string name="ok">OK</string>
    <string name="cancel">キャンセル</string>

    <string name="mainTutorial">
        ・左上の矢印ボタンからメニューが開けます。\n
        ・右上のボタンから設定画面が開けます。\n
        ・中心の￥をタッチすると金額入力ができます。
    </string>
    <string name="mainTutorial2">
        ・金額を入力すると￥が金額に置き換わります。\n
        ・中心の金額を長押ししながら\n
        　当てはまる費目の上まで運び\n
        　費目の上で指を離すと金額が登録されます。
    </string>
    <string name="listTutorial">
        ・リスト画面ではその月の予算額と残り予算額が\n
        　表示されます。\n
        ・左にスクロールすると過去履歴が表示されます。\n
        ・リストをタッチすると詳細が表示されます。
    </string>
    <string name="dataTutorial">
        ・詳細画面では費目や値段の変更\n
        　メモの編集ができます。\n
        ・編集が完了したら右上のボタンで保存できます。\n
    </string>
    <string name="result" formatted="false">赤字額&lt;font color=\"red\"&gt;%s&lt;/font&gt;円</string>



<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tutorial">チュートリアル</string>
</resources>
